change background color of button and font size using CSS inline method

--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
+     <style>
       p {
         color: white;
         background-color: green;
@@ -16,6 +16,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color:green; font-size:20px;">Inline Method</button>
   </body>
 </html>
